--- a/project/main/templates/base/base.html
+++ b/project/main/templates/base/base.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    {% load bootstrap4 %}
+
 
     <head>
+        <meta charset="UTF-8">
+        <title>Член</title>
     </head>
     <body>
         <header>
