--- a/project/main/templates/pages/index.html
+++ b/project/main/templates/pages/index.html
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base/base.html' %}
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,6 +9,5 @@
     <title>Document</title>
 </head>
 <body>
-
 </body>
 </html>
