--- a/project/main/templates/base/base.html
+++ b/project/main/templates/base/base.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
     <head>
         <meta charset="UTF-8">
-        <title>Член</title>
+        <title>Здесь точно не было плохих слов</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+         <link href="https://getbootstrap.com/docs/4.1/examples/sticky-footer-navbar/sticky-footer-navbar.css"
+              rel="stylesheet">
+         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        {% block content %}
+        {% endblock %}
+
     </head>
     <body>
+
         <header>
             {% include 'base/menu.html' %}
         </header>
+        <main role="main" class="mt-3 flex-shrink-0">
+
+        </main>
+
     </body>
 </html>
