--- a/project/main/templates/base/menu.html
+++ b/project/main/templates/base/menu.html
@@ -7,7 +7,10 @@
 
             {% for item in menu %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'add' %}">{{ item.name1 }}</a>
+                    <a class="nav-link" href="{% url 'map' %}">{{ item.name1 }}</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'add' %}">{{ item.name }}</a>
                 </li>
             {% endfor %}
 
