--- a/project/main/templates/pages/map.html
+++ b/project/main/templates/pages/map.html
@@ -1,25 +1,11 @@
-{% include 'base/base.html' %}
+
 
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="A single marker example" />
-    </head>
-    <body>
-        <div id="container"></div>
-        <script type="text/javascript" src="https://mapgl.2gis.com/api/js/v1%22%3E"></script>
-        <script type="text/javascript">
-            const map = new mapgl.Map('container', {
-                center: [55.4507, 37.3656],
-                zoom: 10,
-                key: '1b458161-13e0-4b5e-9f94-4b8accfd9473',
-            });
-            const marker = new mapgl.Marker(map, {
-                coordinates: [55.4507, 37.3656],
-            });
-        </script>
-        <style type="text/css">
+        <style>
             html,
             body,
             #container {
@@ -29,5 +15,27 @@
                 overflow: hidden;
             }
         </style>
+    </head>
+    <body>
+
+        <div id="container"></div>
+        <script type="text/javascript" src="https://mapgl.2gis.com/api/js/v1"></script>
+        <script type="text/javascript">
+            const map = new mapgl.Map('container', {
+                center: [55.4507, 58.3656],
+                zoom: 9,
+                key: '1b458161-13e0-4b5e-9f94-4b8accfd9473',
+            });
+            const marker = new mapgl.Marker(map, {
+                coordinates: [56.0105, 58.2502],
+            });
+            const polyline = new mapgl.Polyline(map, {
+                coordinates: [
+                    [55.4507, 58.3656],
+                    [56.4507, 57.3656],
+                    [58.4507, 53.3656],
+                ],
+            });
+        </script>
     </body>
 </html>
