--- a/project/main/templates/pages/map.html
+++ b/project/main/templates/pages/map.html
@@ -31,9 +31,40 @@
             });
             const polyline = new mapgl.Polyline(map, {
                 coordinates: [
-                    [55.4507, 58.3656],
-                    [56.4507, 57.3656],
-                    [58.4507, 53.3656],
+                    [53.848799, 56.790039],
+                    [53.902344, 56.681551],
+                    [53.840694, 56.60481],
+                    [54.243966, 56.4639],
+                    [54.40704, 56.393368],
+                    [54.575389, 56.538775],
+                    [54.681828, 56.504214],
+                    [54.73756, 56.434886],
+                    [54.846886, 56.423498],
+                    [54.933109, 56.381187],
+                    [54.944434, 56.340797],
+                    [54.978166, 56.3358],
+                    [55.01239, 56.322092],
+                    [55.021733, 56.343822],
+                    [55.167948, 56.330858],
+                    [55.213574, 56.350252]
+                ],
+            });
+
+            const polyline1 = new mapgl.Polyline(map, {
+                coordinates: [
+                    [64.927917, 56.772644],
+                    [64.964767, 56.717486],
+                    [65.011485, 56.592429],
+                    [64.987968, 56.56663],
+                    [64.989859, 56.543123],
+                    [65.009828, 56.492666],
+                    [65.189723, 56.364076],
+                    [65.128233, 56.324849],
+                    [65.148647, 56.28661],
+                    [65.306953, 56.275161],
+                    [65.549213, 56.286273],
+                    [65.674915, 56.26387],
+                    [65.677893, 56.196608],
                 ],
             });
         </script>
