Добавил GeoJson для выделения областей

--- a/project/main/templates/pages/map.html
+++ b/project/main/templates/pages/map.html
@@ -21,6 +21,7 @@
         <div id="container"></div>
         <script type="text/javascript" src="https://mapgl.2gis.com/api/js/v1"></script>
         <script type="text/javascript">
+            import {source, layer} from 'base.js">';
             const map = new mapgl.Map('container', {
                 center: [55.4507, 58.3656],
                 zoom: 9,
@@ -28,6 +29,9 @@
             });
             const marker = new mapgl.Marker(map, {
                 coordinates: [56.0105, 58.2502],
+            });
+            map.on('styleload', () => {
+                map.addLayer(layer);
             });
             const polyline = new mapgl.Polyline(map, {
                 coordinates: [
@@ -49,7 +53,6 @@
                     [55.213574, 56.350252]
                 ],
             });
-
             const polyline1 = new mapgl.Polyline(map, {
                 coordinates: [
                     [64.927917, 56.772644],
